Fixing Transform Domain DCT

--- a/Notebooks/exercises_chap4.ipynb
+++ b/Notebooks/exercises_chap4.ipynb
@@ -670,6 +670,153 @@
     "if output_filepath is not None:        \n",
     "    fig.savefig(output_filepath + 'd_frequency_response_mu{}.jpg'.format(factor), bbox_inches = 'tight')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 27\n",
+    "\n",
+    "For the input signal described in problem 8, derive the autocorrelation matrix of order one ($2 \\times 2$). Apply the DCT and the normalization to $\\textbf{R}$ in order to generate $\\hat{\\textbf{R}} = \\Sigma^{-2}\\textbf{R}\\textbf{T}^T$. Compare the eigenvalue spreads of $\\textbf{R}$ and $\\hat{\\textbf{R}}$.} \n",
+    "\n",
+    "The input signal $x(k)$ is given by \n",
+    "\n",
+    "$$x(k) = g(k)*n_x(k)$$\n",
+    "\n",
+    "where $n_x(k)$ is a white noise with variance $\\sigma_x^2 = 0.5$ and $g(k)$ is the impulse response of the following filter \n",
+    "\n",
+    "$$G(z)  = \\frac{z}{z-0.9}$$\n",
+    "\n",
+    "Consequently, $x(k)$ can be expressed as \n",
+    "\n",
+    "$$x(k) = 0.9x(k-1) + n_x(k)$$ \n",
+    "\n",
+    "According to Equation 2.83, yields the following autocorrelation function: \n",
+    "\n",
+    "$$r(l) = \\frac{0.9^{|l|}}{1-0.9^2} \\sigma_x^2 $$\n",
+    "\n",
+    "where we have $r(0) = 2.63$ and $r(1) = 2.37$. In the case of a $2 \\times 2$ autocorrelation matrix, we have \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R:  [[2.63157895 2.36842105]\n",
+      " [2.36842105 2.63157895]]\n",
+      "eig:  [5.         0.26315789]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.linalg import toeplitz\n",
+    "N = 2\n",
+    "r = lambda l, sigma_x2: (sigma_x2*.9**abs(l))/(1-0.9**2)\n",
+    "R = toeplitz([r(l, sigma_x2) for l in np.arange(N)])\n",
+    "print ('R: ', R)\n",
+    "print ('eig: ', np.linalg.eigvals(R))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation*}\n",
+    "\t\\begin{split}\n",
+    "\t\t\\textbf{R} &= \t\t\n",
+    "\t\t\\begin{bmatrix} \n",
+    "\t\t\tr(0) & r(1) \\\\\n",
+    "\t\t\tr(1) & r(0) \n",
+    "\t\t\\end{bmatrix} \\\\\n",
+    "\t\t&= \t\t\n",
+    "\t\t\\begin{bmatrix} \n",
+    "\t\t\t2.63 & 2.37 \\\\\n",
+    "\t\t\t2.37 & 2.63 \n",
+    "\t\t\\end{bmatrix} \n",
+    "\t\\end{split}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "with eigenvalues $\\lambda = \\{5.000, 0.263\\} \\rightarrow \\frac{\\lambda_{max}}{\\lambda_{min}} = 19.000$. \n",
+    "\n",
+    "Concurrently, for a $2 \\times 2$ matrix, the DCT transform matrix is given by \n",
+    "\n",
+    "$$\\textbf{T} = \\begin{bmatrix} \n",
+    "0.707 & 0.707 \\\\\n",
+    "0.707 & -0.707 \n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "whereas $\\Sigma^{-2}$  is given by\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\t\\begin{split}\n",
+    "\t\t\\Sigma^{-2} = \\begin{bmatrix} \n",
+    "\t\t\t(\\gamma + \\sigma_0^2(k))^{-1} & 0 \\\\\n",
+    "\t\t\t0 & (\\gamma + \\sigma_1^2(k))^{-1} \n",
+    "\t\t\\end{bmatrix}\n",
+    "\t\\end{split}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "with $\\sigma_i^2(k) = \\alpha s_i^2(k) + (1-\\alpha)\\sigma_i^2(k-1)$ and $s(k) = \\textbf{T}x(k)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.5       ,  0.5       ,  0.5       ,  0.5       ],\n",
+       "       [ 0.65328148,  0.27059805, -0.27059805, -0.65328148],\n",
+       "       [ 0.5       , -0.5       , -0.5       ,  0.5       ],\n",
+       "       [ 0.27059805, -0.65328148,  0.65328148, -0.27059805]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def getDCTMatrix(size):\n",
+    "    '''Calculate the square DCT transform matrix. Results are \n",
+    "    equivalent to Matlab dctmtx(n) with 64 bit precision.'''\n",
+    "    DCTmx = np.array(range(size),np.float64).repeat(size).reshape(size,size)\n",
+    "    DCTmxT = np.pi * (DCTmx.transpose()+0.5) / size\n",
+    "    DCTmxT = (1.0/np.sqrt( size / 2.0)) * np.cos(DCTmx * DCTmxT)\n",
+    "    DCTmxT[0] = DCTmxT[0] * (np.sqrt(2.0)/2.0)\n",
+    "    return DCTmxT\n",
+    "getDCTMatrix(N+2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-4dd436266ce4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfftpack\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdct\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ortho'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/scipy/fftpack/realtransforms.py\u001b[0m in \u001b[0;36mdct\u001b[0;34m(x, type, n, axis, norm, overwrite_x)\u001b[0m\n\u001b[1;32m    390\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    391\u001b[0m     \"\"\"\n\u001b[0;32m--> 392\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_dct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnormalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite_x\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moverwrite_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    393\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    394\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/scipy/fftpack/realtransforms.py\u001b[0m in \u001b[0;36m_dct\u001b[0;34m(x, type, n, axis, overwrite_x, normalize)\u001b[0m\n\u001b[1;32m    529\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    530\u001b[0m     \"\"\"\n\u001b[0;32m--> 531\u001b[0;31m     \u001b[0mx0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy_made\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m__fix_shape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'DCT'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    532\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    533\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"DCT-I is not defined for size < 2\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/scipy/fftpack/realtransforms.py\u001b[0m in \u001b[0;36m__fix_shape\u001b[0;34m(x, n, axis, dct_or_dst)\u001b[0m\n\u001b[1;32m    477\u001b[0m     \u001b[0mcopy_made\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_datacopied\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    478\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 479\u001b[0;31m         \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    480\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mtmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    481\u001b[0m         \u001b[0mtmp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy_made2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_fix_shape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
