Adding AffineProjection and TransformDomain DFT

--- a/Notebooks/exercises_chap3.ipynb
+++ b/Notebooks/exercises_chap3.ipynb
@@ -41,21 +41,21 @@
     "\n",
     "### (a) Compute de Wiener Solution\n",
     "\n",
-    "$x(k) = -0.85x(k-1)+n(k) = -ax(k-1)+n(k)$\n",
+    "$$x(k) = -0.85x(k-1)+n(k) = -ax(k-1)+n(k)$$\n",
     "\n",
     "Assuming x(k) is WSS and according to example 2.4.b,\n",
     "\n",
-    "$r(l) = \\frac{(-a)^{|l|}}{1-a^2}$ \n",
+    "$$r(l) = \\frac{(-a)^{|l|}}{1-a^2}$ $\n",
     "\n",
     "Therefore, \n",
     "\n",
-    "$r(0) = \\frac{(-0.85)^{|0|}}{1-(0.85)^2}\\sigma_n^2$\n",
+    "$$r(0) = \\frac{(-0.85)^{|0|}}{1-(0.85)^2}\\sigma_n^2$$\n",
     "\n",
-    "$r(1) = \\frac{(-0.85)^{|1|}}{1-(0.85)^2}\\sigma_n^2$\n",
+    "$$r(1) = \\frac{(-0.85)^{|1|}}{1-(0.85)^2}\\sigma_n^2$$\n",
     "\n",
     "Since $N = 2$ (first-order filter), \n",
     "\n",
-    "$ R = \n",
+    "$$ R = \n",
     "\\begin{bmatrix} \n",
     "r(0) & r(1) \\\\\n",
     "r(1) & r(0) \n",
@@ -69,11 +69,11 @@
     "    3.33 & 2.83 \\\\\n",
     "    2.83 & 3.33\n",
     "\\end{bmatrix}\n",
-    "$\n",
+    "$$\n",
     "\n",
     "Assuming the desired signal is $d(k) = \\textbf{x}(k+L)$\n",
     "\n",
-    "$p = \\begin{bmatrix} \n",
+    "$$p = \\begin{bmatrix} \n",
     "    E[d(k)\\textbf{x}[k]\\\\\n",
     "    E[d(k)\\textbf{x}[k-1]\n",
     "\\end{bmatrix} = \n",
@@ -85,15 +85,15 @@
     "    r(L) \\\\\n",
     "    r(L+1)\n",
     "\\end{bmatrix} \n",
-    "$\n",
+    "$$\n",
     "\n",
     "For $L = 1$ \n",
     "\n",
-    "$\\textbf{p} = [-0.92, 0.78]^T$\n",
+    "$$\\textbf{p} = [-0.92, 0.78]^T$$\n",
     "    \n",
     "Finally, the Wiener solution is \n",
     "\n",
-    "$\\textbf{w}_o = \\textbf{R}^{-1}\\textbf{p} = [-0.85, 0]^T$"
+    "$$\\textbf{w}_o = \\textbf{R}^{-1}\\textbf{p} = [-0.85, 0]^T$$"
    ]
   },
   {
@@ -1214,11 +1214,11 @@
     "_________________\n",
     "# Exercise 16\n",
     "\n",
-    "$w_o(k) = \\lambda_w w_o(k-1)+n(k)$\n",
+    "$$w_o(k) = \\lambda_w w_o(k-1)+n(k)$$\n",
     "\n",
     "where $\\lambda_w = 0.999$ and $n$ is a gaussian white noise with $\\sigma_w^2 = 0.001$. The initial value for w_o is: \n",
     "\n",
-    "$w_o[0] = [0.0349, −0.011, −0.06864, 0.22391, 0.55686, 0.35798, −0.0239, −0.07594]^T$\n",
+    "$$w_o[0] = [0.0349, −0.011, −0.06864, 0.22391, 0.55686, 0.35798, −0.0239, −0.07594]^T$$\n",
     "\n",
     "N = 7+1 = 8\n",
     "\n",
@@ -1228,11 +1228,11 @@
     "\n",
     "$x(k)$ and $n(k)$ independent. \n",
     "\n",
-    "$d(k) = x^T(k)w_o(k)$\n",
+    "$$d(k) = x^T(k)w_o(k)$$\n",
     "\n",
-    "$y(k) = x^T(k)w(k)$\n",
+    "$$y(k) = x^T(k)w(k)$$\n",
     "\n",
-    "$w(k+1) = w(k) -2\\mu e(k)x(k)$\n",
+    "$$w(k+1) = w(k) -2\\mu e(k)x(k)$$\n",
     "\n",
     "\n",
     "### (a) For $\\mu = 0.05$ compute the excess MSE."
